--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "pdfkit": "^0.11.0",
+    "ringcaptcha": "0.0.0",
     "stripe": "^8.56.0"
   },
   "repository": {
