--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "pdfkit": "^0.11.0",
     "ringcaptcha": "0.0.0",
     "stripe": "^8.56.0"
