--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "app.js",
   "engines": {
-    "node": "14.3.0"
+    "node": "12.18.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "NODE_ENV=production MONGO_USER=chocodivinekkr MONGO_PASSWORD=gMXSIeeXHIZ2000K MONGO_DEFAULT_DATABASE=chocodivine ADMIN_EMAIL=chocolatedivinekkr@gmail.com STRIPE=pk_test_h2tgqWZsF19xCvnJ7hQSveem00G5DfgOtO node app.js",
+    "start-server": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "author": "Ritik Gupta",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "-": "0.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.2",
     "csurf": "^1.11.0",
@@ -26,6 +29,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.5.0",
     "g": "^2.0.1",
+    "helmet": "^4.1.1",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
