--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "-": "0.0.1",
+    "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
     "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.2",
@@ -30,6 +32,8 @@
     "express-validator": "^6.5.0",
     "g": "^2.0.1",
     "helmet": "^4.1.1",
+    "imagekit": "^3.1.0",
+    "jquery": "^3.5.1",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -37,7 +41,8 @@
     "passport-google-oauth": "^2.0.0",
     "pdfkit": "^0.11.0",
     "ringcaptcha": "0.0.0",
-    "stripe": "^8.56.0"
+    "stripe": "^8.56.0",
+    "tailwindcss": "^1.8.10"
   },
   "repository": {
     "type": "git",
