--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=production MONGO_USER=chocodivinekkr MONGO_PASSWORD=gMXSIeeXHIZ2000K MONGO_DEFAULT_DATABASE=chocodivine ADMIN_EMAIL=chocolatedivinekkr@gmail.com STRIPE=pk_test_h2tgqWZsF19xCvnJ7hQSveem00G5DfgOtO node app.js",
+    "start": "NODE_ENV=production MONGO_USER=chocodivinekkr MONGO_PASSWORD=gMXSIeeXHIZ2000K MONGO_DEFAULT_DATABASE=chocodivine ADMIN_EMAIL=chocolatedivinekkr@gmail.com MID=NCAfMA53556886213203 KEY=KzkRB6v8cGFQMwJO WEBSITE=WEBSTAGING node app.js",
     "start-server": "node app.js",
     "start:dev": "nodemon app.js"
   },
